--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,513 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
+      "execution_count": 4,
+      "id": "96843c6e",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: beautifulsoup4 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (4.12.2)\n",
+            "Requirement already satisfied: pandas in c:\\users\\gianf\\anaconda3\\lib\\site-packages (2.1.4)\n",
+            "Requirement already satisfied: requests in c:\\users\\gianf\\anaconda3\\lib\\site-packages (2.31.0)\n",
+            "Requirement already satisfied: soupsieve>1.2 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (from beautifulsoup4) (2.5)\n",
+            "Requirement already satisfied: numpy<2,>=1.23.2 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (from pandas) (1.26.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (from pandas) (2023.3.post1)\n",
+            "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (from pandas) (2023.3)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (from requests) (2.0.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (from requests) (3.4)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (from requests) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (from requests) (2024.2.2)\n",
+            "Requirement already satisfied: six>=1.5 in c:\\users\\gianf\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
+      "source": [
+        "pip install beautifulsoup4 pandas requests"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "id": "ccce1e68",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "id": "6c7da71d",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<Response [200]>"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import requests \n",
+        "\n",
+        "url = \"https://www.rottentomatoes.com/browse/movies_at_home/audience:upright~critics:certified_fresh~ratings:pg_13\"\n",
+        "response = requests.get(url)\n",
+        "response"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "id": "af9bbff8",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'Content-Encoding': 'gzip', 'Content-Type': 'text/html; charset=utf-8', 'ETag': 'W/\"3e26c-tE3HPUjy+HGTGlKILGzgpK1AqaA\"', 'X-Content-Type-Options': 'nosniff', 'X-Response-Time': '1038.930ms', 'Content-Length': '41061', 'Date': 'Mon, 13 May 2024 02:25:01 GMT', 'Connection': 'keep-alive', 'Vary': 'Accept-Encoding', 'Set-Cookie': 'akamai_generated_location={\"zip\":\"00901-00902+00906-00931+00933+00935-00937+00939-00940+00955+00975\",\"city\":\"SANJUAN\",\"state\":\"\"\"\",\"county\":\"SANJUAN\",\"areacode\":\"787\",\"lat\":\"18.4697\",\"long\":\"-66.1179\",\"countrycode\":\"PR\"}; expires=Wed, 12-Jun-2024 02:25:01 GMT; path=/; domain=.rottentomatoes.com; secure, akacd_RTReplatform=2147483647~rv=92~id=e95a9ddd321d81b5a5b668a350dc7845; path=/; Expires=Tue, 19 Jan 2038 03:14:07 GMT; Secure; SameSite=None', 'X-Frame-Options': 'SAMEORIGIN', 'Strict-Transport-Security': 'max-age=31536000 ; includeSubDomains'}"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "response.headers "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "id": "7a5e8286",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "text/html; charset=utf-8\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(response.headers['Content-Type'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "id": "41724a37",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from bs4 import BeautifulSoup\n",
+        "\n",
+        "soup = BeautifulSoup(response.content, \"html.parser\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "id": "63c4ab16",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<title>New Movies to Stream at Home (2024) | Rotten Tomatoes</title>"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "soup.find(\"title\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "id": "a1d065c0",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<span class=\"p--small\">Kingdom of the Planet of the Apes</span>"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "movie = soup.find_all('span', class_='p--small')\n",
+        "movie[0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "id": "ad074dcd",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "bs4.element.ResultSet"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "type(movie)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "id": "163ce972",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Kingdom of the Planet of the Apes\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(movie[0].text)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "id": "6627be58",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "movies = [item.text.strip() for item in movie]\n",
+        "#movies"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "id": "6a8955dd",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "release_date = soup.find_all('span', class_='smaller')\n",
+        "#release_date"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "id": "32f4ef0a",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dark Waters\n",
+            "Streaming Aug 22, 2023\n"
+          ]
+        }
+      ],
+      "source": [
+        "release = [item.text.strip() for item in release_date]\n",
+        "\n",
+        "rating = soup.find_all('span', class_='percentage')\n",
+        "rating\n",
+        "\n",
+        "print(movies[7])\n",
+        "print(release[7])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "id": "43ed6463",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/m/war_for_the_planet_of_the_apes'"
+            ]
+          },
+          "execution_count": 30,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "link_element=soup.find('a',slot=\"caption\")\n",
+        "link_url=link_element.get('href')\n",
+        "link_url"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "id": "9aa914f6",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "componentes=soup.find_all('span', class_=['p--small','smaller'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "id": "7b6dbef8",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "movies_names = []\n",
+        "releases = []\n",
+        "for component in componentes:\n",
+        "    # Extract bicycle name\n",
+        "    movie_name = component.text\n",
+        "    movies_names.append(movie_name)\n",
+        "\n",
+        "    # Extract price\n",
+        "    release = component.span\n",
+        "    releases.append(release)\n",
+        "\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "id": "c6e69dda",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Movies_Name</th>\n",
+              "      <th>Released</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>\\n          War for the Planet of the Apes\\n  ...</td>\n",
+              "      <td>\\n            Streaming Apr 1, 2019\\n</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>\\n          Rise of the Planet of the Apes\\n  ...</td>\n",
+              "      <td>\\n            Streaming Nov 10, 2013\\n</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>\\n          Dawn of the Planet of the Apes\\n  ...</td>\n",
+              "      <td>\\n            Streaming Dec 1, 2015\\n</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>\\n          Dark Waters\\n</td>\n",
+              "      <td>\\n            Streaming Nov 22, 2019\\n</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                         Movies_Name  \\\n",
+              "0  \\n          War for the Planet of the Apes\\n  ...   \n",
+              "1  \\n          Rise of the Planet of the Apes\\n  ...   \n",
+              "2  \\n          Dawn of the Planet of the Apes\\n  ...   \n",
+              "3                  \\n          Dark Waters\\n           \n",
+              "\n",
+              "                                           Released  \n",
+              "0   \\n            Streaming Apr 1, 2019\\n            \n",
+              "1  \\n            Streaming Nov 10, 2013\\n            \n",
+              "2   \\n            Streaming Dec 1, 2015\\n            \n",
+              "3  \\n            Streaming Nov 22, 2019\\n            "
+            ]
+          },
+          "execution_count": 38,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df = pd.DataFrame({\n",
+        "    'Movies_Name': (movies_names[4],movies_names[6],movies_names[8],movies_names[10]),\n",
+        "    'Released': (movies_names[5],movies_names[7],movies_names[9],movies_names[11])\n",
+        "})\n",
+        "\n",
+        "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
+      "id": "ca96d136",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Kingdom of the Planet of the Apes\n",
+            "The Fall Guy\n",
+            "The Last Stop in Yuma County\n",
+            "Doctor Who: Season 1\n",
+            "The Idea of You\n",
+            "Abigail\n",
+            "Late Night with the Devil\n",
+            "War for the Planet of the Apes\n",
+            "LaRoy, Texas\n",
+            "Monkey Man\n",
+            "Rise of the Planet of the Apes\n",
+            "Love Lies Bleeding\n",
+            "Dawn of the Planet of the Apes\n",
+            "The Iron Claw\n",
+            "Dark Waters\n",
+            "Dune: Part Two\n",
+            "Wicked Little Letters\n",
+            "Infested\n",
+            "The Peanut Butter Falcon\n",
+            "Planet of the Apes\n",
+            "L.A. Confidential\n",
+            "The Holdovers\n",
+            "Poor Things\n",
+            "The Gentlemen\n",
+            "The Zone of Interest\n",
+            "One Life\n",
+            "Dream Scenario\n",
+            "All of Us Strangers\n",
+            "Barbarian\n",
+            "Anatomy of a Fall\n",
+            "Past Lives\n",
+            "Mad Max: Fury Road\n",
+            "Talk to Me\n",
+            "Rust Creek\n",
+            "Oppenheimer\n",
+            "X\n",
+            "The Amazing Spider-Man\n",
+            "Wonka\n",
+            "Killers of the Flower Moon\n",
+            "Perfect Days\n",
+            "Barbie\n",
+            "When Evil Lurks\n",
+            "Dune\n",
+            "You'll Never Find Me\n",
+            "American Fiction\n",
+            "The Stranger\n",
+            "Bottoms\n",
+            "Interstellar\n",
+            "Housekeeping for Beginners\n",
+            "Everything Everywhere All at Once\n",
+            "Parasite\n",
+            "Promising Young Woman\n",
+            "Ordinary Angels\n",
+            "Hereditary\n",
+            "His House\n",
+            "May December\n",
+            "Hundreds of Beavers\n",
+            "The Equalizer 3\n",
+            "Blackout\n",
+            "The Killer\n",
+            "Biosphere\n",
+            "Top Gun: Maverick\n",
+            "Emily the Criminal\n",
+            "Alien\n",
+            "Scoop\n",
+            "Guy Ritchie's The Covenant\n",
+            "Godzilla vs. Kong\n",
+            "Femme\n",
+            "The Killing of a Sacred Deer\n",
+            "It Follows\n",
+            "Let the Right One In\n",
+            "Marvel's the Avengers\n",
+            "Avengers: Endgame\n",
+            "Seven Samurai\n",
+            "Spider-Man: Across the Spider-Verse\n",
+            "Red, White & Royal Blue\n",
+            "Get Out\n",
+            "Nope\n",
+            "Minari\n",
+            "The Batman\n",
+            "Spider-Man: No Way Home\n",
+            "Let It Be\n",
+            "BlackBerry\n",
+            "The Lighthouse\n",
+            "Mission: Impossible - Dead Reckoning Part One\n",
+            "Baby Driver\n",
+            "Spirited Away\n",
+            "The Gift\n",
+            "None\n"
+          ]
+        }
+      ],
+      "source": [
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "soup = BeautifulSoup(response.content, \"html.parser\")\n",
+        "\n",
+        "def scrape_rot_tom(title_type, user_rating, start_date, end_date):\n",
+        "    url = f\"https://www.rottentomatoes.com/browse/movies_at_home/audience:upright~critics:certified_fresh,fresh?page=3\"\n",
+        "    response = requests.get(url)\n",
+        "\n",
+        "    if response.status_code == 200:\n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "\n",
+        "        movie_titles = soup.find_all('span', class_=\"p--small\")\n",
+        "        for title in movie_titles:\n",
+        "            print(title.text.strip())  \n",
+        "\n",
+        "    else:\n",
+        "        print(\"Failed to retrieve data from Rotten Tomatoes.\")\n",
+        "\n",
+        "\n",
+        "print(scrape_rot_tom(\"movie\", \"90%\", \"2023-01-01\", \"2024-01-10\"))"
       ]
     },
     {
@@ -163,6 +662,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +680,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
