--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
@@ -123,6 +123,44 @@
             "Columns: []\n",
             "Index: []\n"
           ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: []\n",
+              "Index: []"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -131,56 +169,83 @@
         "import pandas as pd\n",
         "\n",
         "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    base_url = \"https://www.imdb.com/search/title/\"\n",
+        "    params = {\n",
+        "        \"title_type\": title_type,\n",
+        "        \"user_rating\": f\"{user_rating},\",\n",
+        "        \"release_date\": f\"{start_date},{end_date}\",\n",
+        "        \"sort\": \"user_rating,desc\",\n",
+        "    }\n",
         "    \n",
-        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}&sort=user_rating,desc\"\n",
-        "\n",
-        "   \n",
-        "    response = requests.get(url)\n",
-        "    soup = BeautifulSoup(response.text, 'html.parser')\n",
-        "\n",
+        "    response = requests.get(base_url, params=params)\n",
+        "    soup = BeautifulSoup(response.content, \"html.parser\")\n",
         "    \n",
-        "    movies = []\n",
-        "\n",
+        "    movies = soup.find_all(\"div\", class_=\"lister-item mode-advanced\")\n",
         "    \n",
-        "    movie_containers = soup.findAll('div', class_='lister-item mode-advanced')\n",
-        "    for container in movie_containers:\n",
-        "       \n",
-        "        number = container.find('h3', class_='lister-item-header').find('span', class_='lister-item-index').get_text(strip=True)\n",
-        "        title = container.h3.a.text\n",
-        "        year = container.h3.find('span', class_='lister-item-year').text\n",
-        "        rating = container.find('div', class_='inline-block ratings-imdb-rating').strong.text if container.find('div', class_='inline-block ratings-imdb-rating') else ''\n",
-        "        runtime = container.find('span', class_='runtime').text if container.find('span', class_='runtime') else ''\n",
-        "        genres = container.find('span', class_='genre').text.strip() if container.find('span', class_='genre') else ''\n",
-        "        description = container.find_all('p', class_='text-muted')[1].text.strip()\n",
-        "        director = ''\n",
-        "        stars = ''\n",
-        "        crew = container.find('p', class_='')\n",
-        "        if crew:\n",
-        "            crew = crew.text.strip().split('|')\n",
-        "            if len(crew) == 2:\n",
-        "                director = crew[0].replace('Director:', '').replace('Directors:', '').strip()\n",
-        "                stars = crew[1].replace('Stars:', '').strip()\n",
+        "    movie_data = []\n",
+        "    \n",
+        "    for movie in movies:\n",
+        "        try:\n",
+        "            title = movie.h3.a.text\n",
+        "        except:\n",
+        "            title = None\n",
+        "        try:\n",
+        "            year = movie.h3.find(\"span\", class_=\"lister-item-year\").text.strip(\"()\")\n",
+        "        except:\n",
+        "            year = None\n",
+        "        try:\n",
+        "            rating = movie.find(\"div\", class_=\"ratings-bar\").strong.text\n",
+        "        except:\n",
+        "            rating = None\n",
+        "        try:\n",
+        "            runtime = movie.find(\"span\", class_=\"runtime\").text.split()[0]\n",
+        "        except:\n",
+        "            runtime = None\n",
+        "        try:\n",
+        "            genre = movie.find(\"span\", class_=\"genre\").text.strip()\n",
+        "        except:\n",
+        "            genre = None\n",
+        "        try:\n",
+        "            description = movie.find_all(\"p\", class_=\"text-muted\")[1].text.strip()\n",
+        "        except:\n",
+        "            description = None\n",
+        "        try:\n",
+        "            director = movie.find(\"p\", class_=\"\").find_all(\"a\")[0].text\n",
+        "        except:\n",
+        "            director = None\n",
+        "        try:\n",
+        "            stars = \", \".join([a.text for a in movie.find(\"p\", class_=\"\").find_all(\"a\")[1:]])\n",
+        "        except:\n",
+        "            stars = None\n",
+        "        try:\n",
+        "            votes = movie.find(\"span\", attrs={\"name\": \"nv\"}).text\n",
+        "        except:\n",
+        "            votes = None\n",
+        "        try:\n",
+        "            gross = movie.find_all(\"span\", attrs={\"name\": \"nv\"})[1].text if len(movie.find_all(\"span\", attrs={\"name\": \"nv\"})) > 1 else None\n",
+        "        except:\n",
+        "            gross = None\n",
         "        \n",
-        "        \n",
-        "        movies.append({\n",
-        "            'Movie Nr': number,\n",
-        "            'Title': title,\n",
-        "            'Year': year,\n",
-        "            'Rating': rating,\n",
-        "            'Runtime (min)': runtime,\n",
-        "            'Genre': genres,\n",
-        "            'Description': description,\n",
-        "            'Director': director,\n",
-        "            'Stars': stars\n",
+        "        movie_data.append({\n",
+        "            \"Title\": title,\n",
+        "            \"Year\": year,\n",
+        "            \"Rating\": rating,\n",
+        "            \"Runtime (min)\": runtime,\n",
+        "            \"Genre\": genre,\n",
+        "            \"Description\": description,\n",
+        "            \"Director\": director,\n",
+        "            \"Stars\": stars,\n",
+        "            \"Votes\": votes,\n",
+        "            \"Gross ($M)\": gross,\n",
         "        })\n",
-        "\n",
-        "   \n",
-        "    df = pd.DataFrame(movies)\n",
+        "    \n",
+        "    df = pd.DataFrame(movie_data)\n",
         "    return df\n",
         "\n",
+        "df = scrape_imdb(\"feature\", 7.5, \"1990-01-01\", \"1992-12-31\")\n",
+        "print(df)\n",
         "\n",
-        "df = scrape_imdb('feature', '7.5,', '1990-01-01', '1992-12-31')\n",
-        "print(df.head())\n"
+        "df\n"
       ]
     },
     {
