--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a9010bcb",
+   "id": "75e5a536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,8 +203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7e5cf15f",
+   "execution_count": 7,
+   "id": "08f23a3b",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
     "\n",
     "# Execute the script to scrape data for movies with the Title Type Feature Film\n",
     "# that have a user rating of 7.5 and above and were released between January 1, 1990, and December 31, 1992\n",
-    "df = scrape_imdb('feature', '7.5', '1990-01-01', '1992-12-31')\n",
+    "df = scrape_imdb('Feature', '5', '2020-01-01', '2021-12-31')\n",
     "\n",
     "# Print the resulting DataFrame\n",
     "print(df)"
