--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,351 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 109,
+      "id": "7fa5fea3",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import requests\n",
+        "import pandas as pd \n",
+        "from bs4 import BeautifulSoup"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 121,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "# Your solution goes here\n",
+        "#soup collection \n",
+        "url = 'https://www.allocine.fr/films/genre-13026/decennie-1990/'\n",
+        "\n",
+        "soup = BeautifulSoup(requests.get(url).content, 'html.parser')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "id": "4ccd7ec6",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Princesse Mononoké\n"
+          ]
+        }
+      ],
+      "source": [
+        "movie_name_tags = soup.find_all(class_= \"meta-title-link\")\n",
+        "print(movie_name_tags [0].text)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 83,
+      "id": "05a33752",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def extract_movie_info(soup):\n",
+        "    movie_names = []\n",
+        "    movie_years = []\n",
+        "    movie_ratings = []\n",
+        "    movie_runtimes = []\n",
+        "    movie_genres = []\n",
+        "    \n",
+        "    #Find all components\n",
+        "    components = soup.find_all('div', class_='card entity-card entity-card-list cf')\n",
+        "\n",
+        "    for component in components:\n",
+        "        # Extract movie name\n",
+        "        movie_name = component.find('a', class_= \"meta-title-link\").text.strip()\n",
+        "        movie_names.append(movie_name)\n",
+        "\n",
+        "        movie_year = component.find('span', class_= \"date\").text.strip()\n",
+        "        movie_years.append(movie_year)\n",
+        "\n",
+        "        movie_rating = component.find('div', class_=\"stareval stareval-small stareval-theme-default\").text.strip()\n",
+        "        movie_ratings.append(movie_rating)\n",
+        "\n",
+        "        meta_body_info = component.find('div', class_='meta-body-item meta-body-info').text.split(\"|\")\n",
+        "\n",
+        "        runtime_str = meta_body_info[1].strip('\\n')\n",
+        "        runtime_final = runtime_str.replace(\" \",\"\").replace(\"min\",\"\")\n",
+        "        movie_runtimes.append(runtime_final)\n",
+        "\n",
+        "        genre_str = meta_body_info[2].strip('\\n')\n",
+        "        genre_final = genre_str.replace(\"\\n\",\" \")\n",
+        "        movie_genres.append(genre_final)\n",
+        "        \n",
+        "        \n",
+        "    # Create DataFrame\n",
+        "    df = pd.DataFrame({\n",
+        "            'movie_name': movie_names,\n",
+        "            'movie_year': movie_years,\n",
+        "            'movie_runtime': movie_runtimes,\n",
+        "            'movie_genre': movie_genres,\n",
+        "            'movie_rating': movie_ratings,\n",
+        "        }) \n",
+        "    return df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "id": "787a1fd6",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['\\n12 janvier 2000\\n',\n",
+              " '\\n2h 15min\\n',\n",
+              " '\\nAventure,\\nAnimation,\\nFantastique\\n']"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "meta_body_info = soup.find('div', class_='meta-body-item meta-body-info').text.split(\"|\")\n",
+        "\n",
+        "meta_body_info"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "id": "13d203de",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'2h 15min'"
+            ]
+          },
+          "execution_count": 47,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "runtime_str = meta_body_info[1].strip('\\n')\n",
+        "runtime_str"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 84,
+      "id": "cc2a06ca",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>movie_name</th>\n",
+              "      <th>movie_year</th>\n",
+              "      <th>movie_runtime</th>\n",
+              "      <th>movie_genre</th>\n",
+              "      <th>movie_rating</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Princesse Mononoké</td>\n",
+              "      <td>12 janvier 2000</td>\n",
+              "      <td>2h15</td>\n",
+              "      <td>Aventure, Animation, Fantastique</td>\n",
+              "      <td>4,8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Le Roi Lion</td>\n",
+              "      <td>23 novembre 1994</td>\n",
+              "      <td>1h29</td>\n",
+              "      <td>Aventure, Animation, Famille</td>\n",
+              "      <td>3,4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Les Aventures de Zak et Crysta dans la forêt t...</td>\n",
+              "      <td>13 janvier 1993</td>\n",
+              "      <td>1h16</td>\n",
+              "      <td>Aventure, Animation, Famille</td>\n",
+              "      <td>3,9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Porco Rosso</td>\n",
+              "      <td>21 juin 1995</td>\n",
+              "      <td>1h29</td>\n",
+              "      <td>Aventure, Animation</td>\n",
+              "      <td>4,8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Toy Story</td>\n",
+              "      <td>27 mars 1996</td>\n",
+              "      <td>1h17</td>\n",
+              "      <td>Animation, Comédie, Famille</td>\n",
+              "      <td>4,0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Anastasia</td>\n",
+              "      <td>4 février 1998</td>\n",
+              "      <td>1h25</td>\n",
+              "      <td>Aventure, Animation, Famille</td>\n",
+              "      <td>3,4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Kirikou et la sorcière</td>\n",
+              "      <td>9 décembre 1998</td>\n",
+              "      <td>1h10</td>\n",
+              "      <td>Animation</td>\n",
+              "      <td>3,8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>Mulan</td>\n",
+              "      <td>25 novembre 1998</td>\n",
+              "      <td>1h28</td>\n",
+              "      <td>Aventure, Animation</td>\n",
+              "      <td>4,2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Princes et princesses</td>\n",
+              "      <td>26 janvier 2000</td>\n",
+              "      <td>1h10</td>\n",
+              "      <td>Animation</td>\n",
+              "      <td>4,1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>La Belle et la Bête</td>\n",
+              "      <td>21 octobre 1992</td>\n",
+              "      <td>1h27</td>\n",
+              "      <td>Animation, Famille, Comédie musicale</td>\n",
+              "      <td>4,2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>Ghost in the Shell</td>\n",
+              "      <td>29 janvier 1997</td>\n",
+              "      <td>1h23</td>\n",
+              "      <td>Action, Animation, Science Fiction</td>\n",
+              "      <td>4,1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>Le Bossu de Notre-Dame</td>\n",
+              "      <td>27 novembre 1996</td>\n",
+              "      <td>1h31</td>\n",
+              "      <td>Animation, Drame, Famille</td>\n",
+              "      <td>3,8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>Aladdin</td>\n",
+              "      <td>24 novembre 1993</td>\n",
+              "      <td>1h30</td>\n",
+              "      <td>Animation, Comédie musicale, Romance</td>\n",
+              "      <td>4,4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>Le Géant de fer</td>\n",
+              "      <td>8 décembre 1999</td>\n",
+              "      <td>1h25</td>\n",
+              "      <td>Action, Aventure, Animation</td>\n",
+              "      <td>4,0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>Le Prince d'Egypte</td>\n",
+              "      <td>16 décembre 1998</td>\n",
+              "      <td>1h39</td>\n",
+              "      <td>Aventure, Animation, Drame</td>\n",
+              "      <td>2,8</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                           movie_name        movie_year  \\\n",
+              "0                                  Princesse Mononoké   12 janvier 2000   \n",
+              "1                                         Le Roi Lion  23 novembre 1994   \n",
+              "2   Les Aventures de Zak et Crysta dans la forêt t...   13 janvier 1993   \n",
+              "3                                         Porco Rosso      21 juin 1995   \n",
+              "4                                           Toy Story      27 mars 1996   \n",
+              "5                                           Anastasia    4 février 1998   \n",
+              "6                              Kirikou et la sorcière   9 décembre 1998   \n",
+              "7                                               Mulan  25 novembre 1998   \n",
+              "8                               Princes et princesses   26 janvier 2000   \n",
+              "9                                 La Belle et la Bête   21 octobre 1992   \n",
+              "10                                 Ghost in the Shell   29 janvier 1997   \n",
+              "11                             Le Bossu de Notre-Dame  27 novembre 1996   \n",
+              "12                                            Aladdin  24 novembre 1993   \n",
+              "13                                    Le Géant de fer   8 décembre 1999   \n",
+              "14                                 Le Prince d'Egypte  16 décembre 1998   \n",
+              "\n",
+              "   movie_runtime                           movie_genre movie_rating  \n",
+              "0           2h15      Aventure, Animation, Fantastique          4,8  \n",
+              "1           1h29          Aventure, Animation, Famille          3,4  \n",
+              "2           1h16          Aventure, Animation, Famille          3,9  \n",
+              "3           1h29                   Aventure, Animation          4,8  \n",
+              "4           1h17           Animation, Comédie, Famille          4,0  \n",
+              "5           1h25          Aventure, Animation, Famille          3,4  \n",
+              "6           1h10                             Animation          3,8  \n",
+              "7           1h28                   Aventure, Animation          4,2  \n",
+              "8           1h10                             Animation          4,1  \n",
+              "9           1h27  Animation, Famille, Comédie musicale          4,2  \n",
+              "10          1h23    Action, Animation, Science Fiction          4,1  \n",
+              "11          1h31             Animation, Drame, Famille          3,8  \n",
+              "12          1h30  Animation, Comédie musicale, Romance          4,4  \n",
+              "13          1h25           Action, Aventure, Animation          4,0  \n",
+              "14          1h39            Aventure, Animation, Drame          2,8  "
+            ]
+          },
+          "execution_count": 84,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df = (extract_movie_info(soup))\n",
+        "df"
       ]
     },
     {
@@ -148,21 +485,12 @@
         "\n",
         "Modify your script so it's capable of iterating over all available pages to fetch data on all the 631 movies (631 is the total number of movies in the proposed example)."
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
-      "metadata": {
-        "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
-      },
-      "outputs": [],
-      "source": [
-        "# Your solution goes here"
-      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +506,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.3"
     }
   },
   "nbformat": 4,
