--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -33,8 +33,8 @@
         "\n",
         "**Expected Outcome**\n",
         "\n",
-        "- A function named `scrape_imdb` that takes four parameters: `title_type`,`user_rating`, `start_date`, and `end_date`.\n",
-        "- The function should return a DataFrame with the following columns:\n",
+        "- A function named `scrape_imdb` that takes four parameters: .\n",
+        "- The function should return a DataFrame with the following columns:`title_type`,`user_rating`, `start_date`, and `end_date`\n",
         "  - **Movie Nr**: The number representing the movie’s position in the list.\n",
         "  - **Title**: The title of the movie.\n",
         "  - **Year**: The year the movie was released.\n",
@@ -109,81 +109,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
-      "source": [
-        "# Your solution goes here"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "9ab1217a-df9d-4a2b-a32c-2c5f1eecd52a",
-      "metadata": {
-        "id": "9ab1217a-df9d-4a2b-a32c-2c5f1eecd52a"
-      },
-      "source": [
-        "## BONUS\n",
-        "\n",
-        "The search results span multiple pages, housing a total of 631 movies in our example with each page displaying 50 movies at most. To scrape data seamlessly from all pages, you'll need to dive deep into the structure of the URLs generated with each \"Next\" click.\n",
-        "\n",
-        "Take a close look at the following URLs:\n",
-        "- First page:\n",
-        "  ```\n",
-        "  https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,\n",
-        "  ```\n",
-        "- Second page:\n",
-        "  ```\n",
-        "  https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=51&ref_=adv_nxt\n",
-        "  ```\n",
-        "- Third page:\n",
-        "  ```\n",
-        "  https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=101&ref_=adv_nxt\n",
-        "  ```\n",
-        "\n",
-        "You should notice a pattern. There is a `start` parameter incrementing by 50 with each page, paired with a constant `ref_` parameter holding the value \"adv_nxt\".\n",
-        "\n",
-        "Modify your script so it's capable of iterating over all available pages to fetch data on all the 631 movies (631 is the total number of movies in the proposed example)."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
-      "metadata": {
-        "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
-      },
-      "outputs": [],
-      "source": [
-        "# Your solution goes here"
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 5
-}
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "All arrays must be of the same length",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[76], line 44\u001b[0m\n\u001b[1;32m     36\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({    \n\u001b[1;32m     37\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFilm_Name\u001b[39m\u001b[38;5;124m'\u001b[39m: film_names,\n\u001b[1;32m     38\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGenre\u001b[39m\u001b[38;5;124m'\u001b[39m: film_genres,\n\u001b[1;32m     39\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRelease Date\u001b[39m\u001b[38;5;124m'\u001b[39m: film_dates,\n\u001b[1;32m     40\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRating\u001b[39m\u001b[38;5;124m'\u001b[39m: film_ratings\n\u001b[1;32m     41\u001b[0m         })\n\u001b[1;32m     42\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n\u001b[0;32m---> 44\u001b[0m \u001b[43mscrape_allocine\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;66;03m#content-layout > section.section.section-wrap.gd-3-cols.gd-gap-20 > div.gd-col-middle > ol > li:nth-child(1) > div > div.meta.meta-affintiy-score > h2 > a\u001b[39;00m\n",
+            "Cell \u001b[0;32mIn[76], line 36\u001b[0m, in \u001b[0;36mscrape_allocine\u001b[0;34m(url)\u001b[0m\n\u001b[1;32m     33\u001b[0m     rating \u001b[38;5;241m=\u001b[39m film_card\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiv\u001b[39m\u001b[38;5;124m'\u001b[39m, class_\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstareval stareval-small stareval-theme-default\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[1;32m     34\u001b[0m     film_ratings\u001b[38;5;241m.\u001b[39mappend(rating)\n\u001b[0;32m---> 36\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\u001b[43m    \u001b[49m\n\u001b[1;32m     37\u001b[0m \u001b[43m    \u001b[49m\u0
